testsuite/tests/typing-recmod/t15bad.compilers.reference
File "t15bad.ml", line 11, characters 15-35:
Error: The type abbreviation M.t is cyclic
